new page aladin

--- a/777/index.html
+++ b/777/index.html
@@ -58,7 +58,7 @@ Chat with Galaxy Bot<font color="green"> (ONLINE) </font></td>
 <table border="" cols="3"  width="100%" nosave="">
 
 <td><font size="+3"><a href="local/index.html">/dev/null</a></font></td>
-<td><font size="+4"> <font color="red">
+<td><font size="+4"> <font color="cyan">
 Backup x0reaxeax<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3"  width="100%" nosave="">
@@ -73,5 +73,9 @@ Primo Test Astrofotografico<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Map of Satellite around Earth<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="Aladin/Aladin Lite.html">Aladin🌟</a></font></td>
+<td><font size="+4"> <font color="cyan">Aladin is an interactive sky atlas allowing the user to visualize digitized astronomical images or full surveys, superimpose entries from astronomical catalogues or databases, and interactively access related data and information from the Simbad database, the VizieR service and other archives for all known astronomical objects in the field. <font color="green"> (ONLINE) </font></td>
 
 </body></html>
