--- a/777/index.html
+++ b/777/index.html
@@ -75,7 +75,7 @@ Map of Satellite around Earth<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3"  width="100%" nosave="">
 
-<td><font size="+3"><a href="Aladin/Aladin Lite.html">Aladin🌟</a></font></td>
-<td><font size="+4"> <font color="cyan">Aladin is an interactive sky atlas allowing the user to visualize digitized astronomical images or full surveys, superimpose entries from astronomical catalogues or databases, and interactively access related data and information from the Simbad database, the VizieR service and other archives for all known astronomical objects in the field. <font color="green"> (ONLINE) </font></td>
+<td><font size="+3"><a href="aladin/AladinLite.html">Aladin🌟</a></font></td>
+<td><font size="+4"> <font color="cyan">Aladin is an interactive sky atlas<font color="green"> (ONLINE) </font></td>
 
 </body></html>
