--- a/777/depth/index.html
+++ b/777/depth/index.html
@@ -87,7 +87,7 @@
   </div>
   <div class="col-md-6">
     <div class="box">
-      <p class="font-white"> If there is not enough material:</p> <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/browndwarf-1041.jpg" class="small-image">
+      <p class="font-white"> If there is not enough material:</p> <img src="https://en.wikipedia.org/wiki/Brown_dwarf#/media/File:T-dwarf-nasa-hurt.png" class="small-image">
       <p class="font-white smaller-top-margin">One possible outcome of a protostar is a <a href="https://en.wikipedia.org/wiki/Brown_dwarf" target="_blank">brown dwarf</a>, a large celestial body that is less luminous than most.</p>
     </div>
   </div>
