--- a/777/index.html
+++ b/777/index.html
@@ -67,5 +67,11 @@ Backup x0reaxeax<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Primo Test Astrofotografico<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="astrophoto/index.html">Random🤖</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Random<font color="green"> (ONLINE) </font></td>
+
 
 </body></html>
