--- a/777/random/index.html
+++ b/777/random/index.html
@@ -1,6 +1,6 @@
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>SIGTERM</title>
+    <title>Starry</title>
     <style>
     #webgl{
         position:absolute;
