--- a/777/earth2/index.html
+++ b/777/earth2/index.html
@@ -16,18 +16,6 @@
         <img id="screenshot" src="" alt="Screenshot">
     </div>
 
-    <script>
-        async function takeScreenshot() {
-            const response = await fetch('/screenshot');
-            const data = await response.blob();
-            const url = URL.createObjectURL(data);
-            document.getElementById('screenshot').src = url;
-        }
-
-        // Aggiorna lo screenshot ogni volta che la pagina viene caricata
-        window.onload = takeScreenshot;
-        // Aggiorna lo screenshot ogni 5 minuti (300000 ms)
-        setInterval(takeScreenshot, 300000);
-    </script>
+    <script src="screenshot.js"></script>
 </body>
 </html>
