--- a/777/index.html
+++ b/777/index.html
@@ -73,5 +73,10 @@ Primo Test Astrofotografico<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Random<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="earth2/index.html">EARTH2🌐</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Earth2 Profile<font color="green"> (ONLINE) </font></td>
 
 </body></html>
