--- a/777/earth2/index.html
+++ b/777/earth2/index.html
@@ -80,6 +80,11 @@
             <img src="E2 GDC 2024 - BASIC.jpg" alt="Skin 2">
             <p class="skin-description">E2 GDC 2024, Quantity in the world (10000), Shirt for Male Body Type, Only available for 1 day ever, E$2.50</p>
         </div>
+		
+		 <div class="skin-group">
+            <img src="Jolly Roger Radioactive.png" alt="Skin 3">
+            <p class="skin-description">E2 Jolly Roger Radioactive, Quantity in the world (250), Male Body Type, Only available for 1 day ever, E$30</p>
+        </div>
     </div>
 
     <script src="screenshot.js"></script>
