--- a/777/earth2/index.html
+++ b/777/earth2/index.html
@@ -13,10 +13,10 @@
             padding: 0;
         }
         #title {
-            font-size: 24px;
+            font-size: 37px;
             font-weight: bold;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         #screenshot-container {
             text-align: center;
@@ -75,7 +75,10 @@
     </style>
 </head>
 <body>
-    <div id="title">MY EARTH2.IO SKINS PROFILE</div>
+
+
+
+    <div id="title">𝑀𝒴 𝐸𝒜𝑅𝒯𝐻𝟤.𝐼𝒪 𝒮𝒦𝐼𝒩𝒮 𝒫𝑅𝒪𝐹𝐼𝐿𝐸</div>
 <font color="purple">
     <div id="screenshot-container">
     </div>
