--- a/777/earth2/index.html
+++ b/777/earth2/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         #title {
-            font-size: 37px;
+            font-size: 31px;
             font-weight: bold;
             text-align: center;
             margin-bottom: 30px;
@@ -78,7 +78,7 @@
 
 
 
-    <div id="title">𝑀𝒴 𝐸𝒜𝑅𝒯𝐻𝟤.𝐼𝒪 𝒮𝒦𝐼𝒩𝒮 𝒫𝑅𝒪𝐹𝐼𝐿𝐸</div>
+    <div id="title">𝐌𝐘 𝐄𝐀𝐑𝐓𝐇𝟐.𝐈𝐎 𝐒𝐊𝐈𝐍𝐒 𝐏𝐑𝐎𝐅𝐈𝐋𝐄</div>
 <font color="purple">
     <div id="screenshot-container">
     </div>
