--- a/777/index.html
+++ b/777/index.html
@@ -79,4 +79,10 @@ Random<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Earth2 Profile<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="3body/3body.html">3 body problem🔴🔵🟢</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Earth2 Profile<font color="green"> (ONLINE) </font></td>
+
 </body></html>
