--- a/777/index.html
+++ b/777/index.html
@@ -83,6 +83,6 @@ Earth2 Profile<font color="green"> (ONLINE) </font></td>
 
 <td><font size="+3"><a href="3body/3body.html">3 body problem🔴🔵🟢</a></font></td>
 <td><font size="+4"> <font color="cyan">
-Earth2 Profile<font color="green"> (ONLINE) </font></td>
+Simulation 3 (star) system<font color="green"> (ONLINE) </font></td>
 
 </body></html>
