--- a/777/3body/3body.html
+++ b/777/3body/3body.html
@@ -18,7 +18,7 @@
     #container {
       width: 800px;
       height: 600px;
-      border: 1px solid black; /* Bordi neri */
+      border: 1px solid white; /* Bordi bianchi */
       position: relative;
       overflow: hidden;
     }
@@ -116,7 +116,7 @@
         this.acceleration = createVector(0, 0);
         this.size = size; // Dimensione del corpo
         this.color = color;
-        this.maxSpeed = 2; // Velocità massima ridotta per una rotazione più lenta
+        this.maxSpeed = color === 'blue' ? 2 : 1; // Velocità massima ridotta per una rotazione più lenta per stelle non blu
         this.mass = size / 2; // Massa proporzionale alla dimensione (più piccola stella ha meno massa)
       }
 
@@ -134,13 +134,18 @@
         }
         
         // Rallenta e riorienta le stelle se si avvicinano ai bordi
-        let borderForce = createVector(0, 0);
-        let distanceToCenter = dist(this.position.x, this.position.y, center.x, center.y);
-        if (distanceToCenter > 250) {
-          let steering = p5.Vector.sub(center, this.position);
-          steering.setMag(0.05);
-          this.velocity.add(steering);
-        }
+let borderForce = createVector(0, 0);
+let distanceToCenter = dist(this.position.x, this.position.y, center.x, center.y);
+if (distanceToCenter > 250) {
+  let steering = p5.Vector.sub(center, this.position);
+  steering.setMag(0.05);
+  this.velocity.add(steering);
+}
+
+// Limita la posizione delle stelle all'interno del riquadro
+this.position.x = constrain(this.position.x, 50, width - 50);
+this.position.y = constrain(this.position.y, 50, height - 50);
+        
         if (this.position.x <= 50) {
           borderForce.x += 1;
         } else if (this.position.x >= width - 50) {
