--- a/777/index.html
+++ b/777/index.html
@@ -87,7 +87,7 @@ Simulation 3 star system<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3"  width="100%" nosave="">
 
-<td><font size="+3"><a href="blackole/index.html">black hole</a></font></td>
+<td><font size="+3"><a href="blackhole/index.html">black hole</a></font></td>
 <td><font size="+4"> <font color="black">
 Simulation black hole<font color="green"> (ONLINE) </font></td>
 
