--- a/777/index.html
+++ b/777/index.html
@@ -91,6 +91,8 @@ Simulation 3 star system<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="black">
 Simulation black hole<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
 <td><font size="+3"><a href="chat/index.php">chatroom ️💬</a></font></td>
 <td><font size="+4"> <font color="cyan">
 Live chatroom<font color="green"> (ONLINE) </font></td>
