--- a/777/index.html
+++ b/777/index.html
@@ -88,7 +88,7 @@ Simulation 3 star system<font color="green"> (ONLINE) </font></td>
 <table border="" cols="3"  width="100%" nosave="">
 
 <td><font size="+3"><a href="blackhole/index.html">blackhole 🕳️</a></font></td>
-<td><font size="+4"> <font color="black">
+<td><font size="+4"> <font color="cyan">
 Simulation black hole<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3"  width="100%" nosave="">
