--- a/777/index.html
+++ b/777/index.html
@@ -91,3 +91,9 @@ Simulation 3 star system<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Simulation black hole<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="forum/index.html">Forum️</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Forum<font color="green"> (ONLINE) </font></td>
+
