--- a/777/index.html
+++ b/777/index.html
@@ -91,3 +91,14 @@ Simulation black hole<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Forum<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="mystic/index.html">Mystic 🪐</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Mystic<font color="green"> (ONLINE) </font></td>
+
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="chat/chatroom.php">Chatroom 🗯️</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Chatroom<font color="green"> (ONLINE) </font></td>
