--- a/777/index.html
+++ b/777/index.html
@@ -102,3 +102,10 @@ Mystic<font color="green"> (ONLINE) </font></td>
 <td><font size="+3"><a href="chat/chatroom.php">Chatroom 🗯️</a></font></td>
 <td><font size="+4"> <font color="cyan">
 Chatroom<font color="green"> (ONLINE) </font></td>
+
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="wormhole/index.html">Wormhole 🌀</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Wormhole Simulation<font color="green"> (ONLINE) </font></td>
+
